Normalized formatting across most classes Made all member variables private - added getNumOfCards() to Cardpile class to replace direct accesses to numOfCards Removed numOfCards data member from Cardpile and Hand classes - Removed updateNumOfCards() from Hand class Changed references to ArrayList and LinkedList in variable and function declarations to List to make proper use of collections API